fix: added z-index in the tooltips of the sidebar

--- a/src/components/_shared/sidebar/components/SidebarItem.module.css
+++ b/src/components/_shared/sidebar/components/SidebarItem.module.css
@@ -59,6 +59,7 @@
     font-size: 0.85rem;
     top: 5px;
     right: -85px;
+    z-index: 1;
   }
 }
 
